// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`diff-test: roll slides == bash oracle > --help → help + exit 0 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "roll slides — deck.md → HTML rendering
roll slides — 幻灯片 deck.md 渲染管线

USAGE  用法
  roll slides build <slug> [--no-open]
                          Render .roll/slides/<slug>/deck.md → .roll/slides/<slug>.html
                          渲染 deck.md 为 HTML 并自动打开浏览器
  roll slides new "<topic>" [--template <name>] [--no-build]
                          Generate deck.md via AI, then auto-build + open HTML
                          通过 AI 生成 deck.md，自动渲染并打开 HTML
  roll slides list        List all decks (built / stale / failed / unbuilt)
                          列出 .roll/slides/ 下所有幻灯片（四态）
  roll slides preview <slug> [--no-open]
                          Open .roll/slides/<slug>.html in the default browser
                          在浏览器中打开已渲染的幻灯片
  roll slides logs <slug> Show the last build failure log for a deck
                          显示幻灯片上次构建失败日志
  roll slides templates   List available slide templates (built-in + project)
                          列出可用模板（内置 + 项目自定义）
  roll slides delete <slug> [--force]
                          Delete a deck (dir + HTML) with confirmation prompt
                          删除幻灯片（含目录与 HTML），需确认

OPTIONS  选项
  --no-open               Skip auto-opening the rendered HTML in a browser
                          渲染后不自动打开浏览器
  --no-build              Skip auto-build after agent completes (deck.md only)
                          仅生成 deck.md，不自动渲染
  --force                 Skip confirmation prompt (delete subcommand)
                          跳过确认提示（delete 子命令）
  --help, -h              Show this help
                          显示本帮助
",
}
`;

exports[`diff-test: roll slides == bash oracle > build CJK deck → identical HTML + Rendered note (en, F9) 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "[roll] Rendered → .roll/slides/反馈闭环.html
",
}
`;

exports[`diff-test: roll slides == bash oracle > build CJK deck → identical HTML + Rendered note (en, F9) 2`] = `
"<!DOCTYPE html>
<html lang="en" data-theme="dark" data-lang="en">
<head>
<meta charset="UTF-8">
<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
<title>Feedback Loop</title>
<meta name="title-zh" content="反馈闭环">
<meta name="deck-slug" content="反馈闭环">
<style>
  @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Noto+Sans+SC:wght@300;400;500;600;700;900&display=swap');

  :root {
    --bg: #0a0a0f;
    --bg-card: #12121a;
    --bg-card-hover: #1a1a28;
    --bg-control: rgba(18,18,26,0.92);
    --text: #e8e8ef;
    --text-dim: #8888a0;
    --text-bright: #ffffff;
    --accent: #6366f1;
    --accent-light: #818cf8;
    --green: #22c55e;
    --green-text: #4ade80;
    --orange: #f59e0b;
    --orange-text: #fbbf24;
    --red: #ef4444;
    --red-text: #f87171;
    --cyan: #06b6d4;
    --cyan-text: #22d3ee;
    --border: rgba(255,255,255,0.06);
    --border-strong: rgba(255,255,255,0.12);
    --shadow: 0 4px 24px rgba(0,0,0,0.3);
    --radius: 16px;
  }

  [data-theme="light"] {
    --bg: #fafafc;
    --bg-card: #ffffff;
    --bg-card-hover: #f3f4f8;
    --bg-control: rgba(255,255,255,0.95);
    --text: #1f2937;
    --text-dim: #6b7280;
    --text-bright: #0a0a0f;
    --accent: #6366f1;
    --accent-light: #4f46e5;
    --green: #16a34a;
    --green-text: #15803d;
    --orange: #d97706;
    --orange-text: #b45309;
    --red: #dc2626;
    --red-text: #b91c1c;
    --cyan: #0891b2;
    --cyan-text: #0e7490;
    --border: rgba(15,23,42,0.08);
    --border-strong: rgba(15,23,42,0.14);
    --shadow: 0 4px 24px rgba(15,23,42,0.06);
  }

  * { margin: 0; padding: 0; box-sizing: border-box; }

  html, body {
    font-family: 'Inter', 'Noto Sans SC', system-ui, sans-serif;
    background: var(--bg);
    color: var(--text);
    height: 100%;
    width: 100%;
    overflow: hidden;
    transition: background 0.3s ease, color 0.3s ease;
  }

  /* Language switching: only show the active language */
  [data-lang="en"] .lang-zh { display: none !important; }
  [data-lang="zh"] .lang-en { display: none !important; }

  #progress-bar {
    position: fixed; top: 0; left: 0; height: 3px;
    background: linear-gradient(90deg, var(--accent), var(--cyan));
    z-index: 1000; transition: width 0.4s ease;
  }

  .slides-container { position: relative; width: 100vw; height: 100vh; }

  .slide {
    position: absolute; inset: 0;
    display: flex; flex-direction: column;
    justify-content: center; align-items: center;
    padding: 64px 80px 96px;
    opacity: 0; transform: translateY(30px);
    transition: opacity 0.5s ease, transform 0.5s ease;
    pointer-events: none; overflow-y: auto;
  }
  .slide.active { opacity: 1; transform: translateY(0); pointer-events: auto; }
  .slide.exit-up { opacity: 0; transform: translateY(-30px); }

  .slide-number {
    position: absolute; top: 28px; right: 24px;
    font-size: 13px; color: var(--text-dim); font-weight: 500;
  }

  .tag {
    display: inline-block; padding: 5px 14px;
    background: rgba(99,102,241,0.12); color: var(--accent-light);
    border-radius: 20px; font-size: 12px; font-weight: 600;
    letter-spacing: 0.06em; text-transform: uppercase; margin-bottom: 16px;
  }
  [data-theme="light"] .tag { background: rgba(99,102,241,0.1); }

  h1 {
    font-size: 52px; font-weight: 800; line-height: 1.15;
    color: var(--text-bright); text-align: center; margin-bottom: 12px;
  }
  h1 .gradient {
    background: linear-gradient(135deg, var(--accent-light), var(--cyan));
    -webkit-background-clip: text; -webkit-text-fill-color: transparent;
  }
  h2 {
    font-size: 34px; font-weight: 700; line-height: 1.25;
    color: var(--text-bright); margin-bottom: 12px; text-align: center;
  }
  h3 { font-size: 18px; font-weight: 600; color: var(--text-bright); margin-bottom: 6px; }
  strong { color: var(--text-bright); }

  .subtitle {
    font-size: 18px; color: var(--text-dim); line-height: 1.6;
    text-align: center; max-width: 720px;
  }
  .section-desc {
    font-size: 15px; color: var(--text-dim); line-height: 1.7;
    max-width: 820px; margin-bottom: 24px; text-align: center;
  }

  .cards { display: grid; gap: 14px; width: 100%; max-width: 1100px; }
  .cards-2 { grid-template-columns: 1fr 1fr; }
  .cards-3 { grid-template-columns: 1fr 1fr 1fr; }
  .cards-4 { grid-template-columns: repeat(4, 1fr); }

  .card {
    background: var(--bg-card); border: 1px solid var(--border);
    border-radius: var(--radius); padding: 20px 20px;
    transition: all 0.3s ease;
    box-shadow: var(--shadow);
  }
  .card:hover { background: var(--bg-card-hover); transform: translateY(-2px); }
  .card p { font-size: 13px; color: var(--text-dim); line-height: 1.6; }
  .card .small { font-size: 11px; }

  .metric-row {
    display: flex; gap: 14px; width: 100%; max-width: 1000px;
    justify-content: center; margin-top: 8px;
  }
  .metric {
    text-align: center; padding: 20px 14px;
    background: var(--bg-card); border: 1px solid var(--border);
    border-radius: var(--radius); flex: 1;
    box-shadow: var(--shadow);
  }
  .metric .number { font-size: 32px; font-weight: 800; line-height: 1; margin-bottom: 6px; }
  .metric .label { font-size: 12px; color: var(--text-dim); font-weight: 500; }

  .compare {
    display: grid; grid-template-columns: 1fr 50px 1fr;
    gap: 0; width: 100%; max-width: 1000px; align-items: start;
  }
  .compare-col { padding: 22px 20px; border-radius: var(--radius); }
  .compare-before { background: rgba(239,68,68,0.06); border: 1px solid rgba(239,68,68,0.18); }
  .compare-after { background: rgba(34,197,94,0.06); border: 1px solid rgba(34,197,94,0.18); }
  [data-theme="light"] .compare-before { background: rgba(239,68,68,0.04); }
  [data-theme="light"] .compare-after { background: rgba(34,197,94,0.04); }
  .compare-arrow {
    display: flex; align-items: center; justify-content: center;
    font-size: 24px; color: var(--text-dim); padding-top: 36px;
  }
  .compare-col h3 { margin-bottom: 14px; font-size: 15px; }
  .compare-item {
    display: flex; align-items: flex-start; gap: 8px;
    margin-bottom: 10px; font-size: 13px; line-height: 1.5; color: var(--text);
  }
  .compare-item .icon { flex-shrink: 0; font-size: 13px; margin-top: 2px; }

  .pipeline-bar {
    display: flex; gap: 4px; width: 100%; max-width: 1000px; margin-top: 8px;
  }
  .pipe-stage {
    flex: 1; text-align: center; padding: 14px 8px; border-radius: 12px;
  }
  .pipe-stage h4 { font-size: 16px; font-weight: 700; }
  .pipe-stage p { font-size: 11px; color: var(--text-dim); margin-top: 4px; line-height: 1.4; }
  .pipe-idea, .pipe-backlog { background: rgba(99,102,241,0.08); border: 1.5px solid rgba(99,102,241,0.3); }
  .pipe-idea h4, .pipe-backlog h4 { color: var(--accent-light); }
  .pipe-build { background: rgba(34,197,94,0.08); border: 1.5px solid rgba(34,197,94,0.3); }
  .pipe-build h4 { color: var(--green-text); }
  .pipe-verify { background: rgba(245,158,11,0.08); border: 1.5px solid rgba(245,158,11,0.3); }
  .pipe-verify h4 { color: var(--orange-text); }
  .pipe-release { background: rgba(6,182,212,0.08); border: 1.5px solid rgba(6,182,212,0.3); }
  .pipe-release h4 { color: var(--cyan-text); }
  .pipe-arrow { display: flex; align-items: center; justify-content: center; font-size: 16px; color: var(--text-dim); padding: 0 2px; }

  /* Human-AI bar */
  .hai-bar { display: flex; gap: 4px; width: 100%; max-width: 1000px; margin-top: 8px; }
  .hai-zone { text-align: center; padding: 14px 10px; border-radius: 12px; }
  .hai-zone .emoji { font-size: 20px; }
  .hai-zone h4 { font-size: 14px; font-weight: 700; margin-top: 4px; }
  .hai-zone p { font-size: 11px; color: var(--text-dim); margin-top: 4px; line-height: 1.5; }
  .hai-human { flex: 2; background: rgba(99,102,241,0.06); border: 1px solid rgba(99,102,241,0.18); }
  .hai-human h4 { color: var(--accent-light); }
  .hai-ai { flex: 2; background: rgba(34,197,94,0.06); border: 1px solid rgba(34,197,94,0.18); }
  .hai-ai h4 { color: var(--green-text); }
  .hai-push { flex: 1; background: rgba(245,158,11,0.06); border: 1px solid rgba(245,158,11,0.18); }
  .hai-push h4 { color: var(--orange-text); }

  .quote-block {
    border-left: 3px solid var(--accent);
    padding: 14px 22px; margin: 14px 0;
    background: rgba(99,102,241,0.06);
    border-radius: 0 10px 10px 0; max-width: 720px;
  }
  .quote-block p { font-size: 15px; font-style: italic; color: var(--text); line-height: 1.6; }

  .highlight-box {
    background: linear-gradient(135deg, rgba(99,102,241,0.1), rgba(6,182,212,0.1));
    border: 1px solid rgba(99,102,241,0.2);
    border-radius: var(--radius); padding: 20px 24px; max-width: 820px; text-align: center;
  }
  .highlight-box p { font-size: 14px; color: var(--text); line-height: 1.6; }

  .analogy {
    background: rgba(245,158,11,0.06); border: 1px solid rgba(245,158,11,0.18);
    border-radius: var(--radius); padding: 14px 20px; max-width: 820px; margin-top: 14px;
  }
  .analogy-label {
    font-size: 11px; font-weight: 700; color: var(--orange-text);
    text-transform: uppercase; letter-spacing: 0.08em; margin-bottom: 5px;
  }
  .analogy p { font-size: 13px; line-height: 1.6; color: var(--text); }

  .flow-row {
    display: flex; align-items: center; gap: 8px;
    flex-wrap: wrap; justify-content: center;
  }
  .flow-step {
    padding: 10px 16px; border-radius: 10px;
    font-size: 13px; font-weight: 600;
  }
  .flow-arrow { font-size: 16px; color: var(--text-dim); }
  .flow-branch { display: flex; flex-direction: column; gap: 6px; align-items: center; }

  .timeline {
    width: 100%; max-width: 880px; position: relative; padding-left: 36px;
  }
  .timeline::before {
    content: ''; position: absolute; left: 12px; top: 0; bottom: 0;
    width: 2px; background: var(--border-strong);
  }
  .timeline-item { position: relative; margin-bottom: 14px; padding-left: 24px; }
  .timeline-item::before {
    content: ''; position: absolute; left: -30px; top: 5px;
    width: 10px; height: 10px; border-radius: 50%;
    background: var(--accent); box-shadow: 0 0 10px rgba(99,102,241,0.3);
  }
  .timeline-item h4 { font-size: 14px; font-weight: 700; color: var(--text-bright); margin-bottom: 3px; }
  .timeline-item p { font-size: 12.5px; color: var(--text-dim); line-height: 1.5; }

  /* Skill table */
  .skill-table {
    width: 100%; max-width: 1060px; border-collapse: collapse; margin-top: 8px;
  }
  .skill-table th {
    text-align: left; font-size: 11px; font-weight: 700; color: var(--text-dim);
    text-transform: uppercase; letter-spacing: 0.06em;
    padding: 6px 10px; border-bottom: 1px solid var(--border-strong);
  }
  .skill-table td {
    padding: 7px 10px; font-size: 12.5px; color: var(--text);
    border-bottom: 1px solid var(--border); vertical-align: top;
  }
  [data-theme="dark"] .skill-table tr:hover td { background: rgba(255,255,255,0.02); }
  [data-theme="light"] .skill-table tr:hover td { background: rgba(15,23,42,0.02); }
  .skill-name {
    font-family: 'SF Mono', 'Fira Code', monospace; font-weight: 600;
    font-size: 12px; white-space: nowrap;
  }
  .phase-tag {
    font-size: 10px; padding: 2px 7px; border-radius: 4px; font-weight: 600;
    display: inline-block;
  }
  .phase-design { background: rgba(99,102,241,0.15); color: var(--accent-light); }
  .phase-build { background: rgba(34,197,94,0.15); color: var(--green-text); }
  .phase-check { background: rgba(245,158,11,0.15); color: var(--orange-text); }
  .phase-auto { background: rgba(6,182,212,0.15); color: var(--cyan-text); }
  .phase-support { background: rgba(255,255,255,0.06); color: var(--text-dim); }
  [data-theme="light"] .phase-support { background: rgba(15,23,42,0.06); }

  /* Autonomous layers */
  .auto-layers {
    display: flex; gap: 12px; width: 100%; max-width: 1000px; margin-top: 8px;
  }
  .auto-layer {
    flex: 1; text-align: center; padding: 18px 14px; border-radius: var(--radius);
    background: var(--bg-card); border: 1px solid var(--border);
    box-shadow: var(--shadow);
  }
  .auto-layer .al-icon { font-size: 28px; }
  .auto-layer h4 { font-size: 14px; font-weight: 700; color: var(--text-bright); margin-top: 6px; }
  .auto-layer p { font-size: 12px; color: var(--text-dim); margin-top: 6px; line-height: 1.5; }
  .auto-layer .al-skills {
    font-size: 10px; color: var(--text-dim); margin-top: 8px;
    font-family: 'SF Mono', 'Fira Code', monospace;
  }

  .tree {
    font-family: 'SF Mono', 'Fira Code', monospace;
    font-size: 13px; line-height: 1.7; color: var(--text);
    background: var(--bg-card); border: 1px solid var(--border);
    border-radius: var(--radius); padding: 20px 24px;
    max-width: 720px; width: 100%;
    box-shadow: var(--shadow);
  }
  .tree .comment { color: var(--text-dim); }
  .tree .file { color: var(--cyan-text); }
  .tree .dir { color: var(--accent-light); }

  .skill-tag {
    font-size: 11px; padding: 4px 8px; border-radius: 6px;
    font-weight: 600; font-family: 'SF Mono', 'Fira Code', monospace;
    background: rgba(99,102,241,0.15); color: var(--accent-light);
  }

  /* Loop overview pills */
  .loops-row {
    display: flex; gap: 4px; width: 100%; max-width: 1000px; margin-top: 12px;
  }
  .loop-pill {
    flex: 1; text-align: center; padding: 8px 6px; border-radius: 8px;
    border: 1px dashed;
  }
  .loop-pill.la { border-color: rgba(99,102,241,0.4); background: rgba(99,102,241,0.04); }
  .loop-pill.lb { border-color: rgba(34,197,94,0.4); background: rgba(34,197,94,0.04); }
  .loop-pill.lc { border-color: rgba(245,158,11,0.4); background: rgba(245,158,11,0.04); }
  .loop-pill h5 { font-size: 12px; font-weight: 700; }
  .loop-pill.la h5 { color: var(--accent-light); }
  .loop-pill.lb h5 { color: var(--green-text); }
  .loop-pill.lc h5 { color: var(--orange-text); }
  .loop-pill p { font-size: 10px; color: var(--text-dim); margin-top: 2px; }

  /* Controls (theme + lang) */
  .controls {
    position: fixed; top: 18px; left: 18px;
    display: flex; gap: 8px; z-index: 200;
  }
  .ctrl-btn {
    background: var(--bg-control); backdrop-filter: blur(20px);
    border: 1px solid var(--border-strong);
    color: var(--text); font-size: 12px; font-weight: 600;
    padding: 8px 14px; border-radius: 24px; cursor: pointer;
    display: flex; align-items: center; gap: 6px;
    transition: all 0.2s;
    min-height: 36px;
  }
  .ctrl-btn:hover { transform: translateY(-1px); border-color: var(--accent-light); }
  .ctrl-btn svg { width: 14px; height: 14px; }
  .ctrl-btn .label { font-size: 12px; }

  /* Nav */
  .nav {
    position: fixed; bottom: 24px; left: 50%; transform: translateX(-50%);
    display: flex; align-items: center; gap: 14px; z-index: 100;
    background: var(--bg-control); backdrop-filter: blur(20px);
    padding: 8px 18px; border-radius: 40px; border: 1px solid var(--border-strong);
  }
  .nav-btn {
    width: 36px; height: 36px; border-radius: 50%;
    background: rgba(127,127,127,0.08); border: 1px solid var(--border-strong);
    color: var(--text); font-size: 18px; cursor: pointer;
    display: flex; align-items: center; justify-content: center; transition: all 0.2s;
  }
  .nav-btn:hover { background: rgba(127,127,127,0.16); }
  .nav-btn:disabled { opacity: 0.3; cursor: default; }
  .nav-info { font-size: 12px; color: var(--text-dim); font-weight: 500; min-width: 50px; text-align: center; }

  .key-hint {
    position: fixed; bottom: 32px; right: 24px;
    font-size: 11px; color: var(--text-dim); display: flex; gap: 10px; z-index: 100;
  }
  .key-hint kbd {
    background: rgba(127,127,127,0.1); border: 1px solid var(--border-strong);
    padding: 1px 6px; border-radius: 3px; font-family: inherit;
  }

  .fade-in { opacity: 0; transform: translateY(16px); }
  .slide.active .fade-in { animation: fadeUp 0.5s ease forwards; }
  .slide.active .fade-in:nth-child(2) { animation-delay: 0.06s; }
  .slide.active .fade-in:nth-child(3) { animation-delay: 0.12s; }
  .slide.active .fade-in:nth-child(4) { animation-delay: 0.18s; }
  .slide.active .fade-in:nth-child(5) { animation-delay: 0.24s; }
  .slide.active .fade-in:nth-child(6) { animation-delay: 0.30s; }
  @keyframes fadeUp { to { opacity: 1; transform: translateY(0); } }

  .slide::-webkit-scrollbar { width: 4px; }
  .slide::-webkit-scrollbar-thumb { background: var(--border-strong); border-radius: 2px; }

  /* Mobile adaptation */
  @media (max-width: 900px) {
    .slide { padding: 64px 18px 110px; justify-content: flex-start; }
    h1 { font-size: 30px; }
    h2 { font-size: 22px; line-height: 1.3; }
    h3 { font-size: 15px; }
    .subtitle { font-size: 15px; }
    .section-desc { font-size: 13px; margin-bottom: 16px; }
    .tag { font-size: 11px; padding: 4px 11px; margin-bottom: 12px; }
    .cards-2, .cards-3, .cards-4 { grid-template-columns: 1fr; }
    .compare { grid-template-columns: 1fr; gap: 12px; }
    .compare-arrow { transform: rotate(90deg); padding: 0; }
    .pipeline-bar { flex-direction: column; }
    .pipe-arrow { transform: rotate(90deg); padding: 4px 0; }
    .hai-bar { flex-direction: column; }
    .auto-layers { flex-direction: column; }
    .loops-row { flex-direction: column; }
    .metric-row { flex-direction: column; }
    .timeline { padding-left: 28px; }
    .timeline-item { padding-left: 16px; }
    .skill-table { font-size: 11px; }
    .skill-table th:nth-child(2), .skill-table td:nth-child(2) { display: none; }
    .slide-number { top: 16px; right: 16px; font-size: 11px; }
    .controls { top: 12px; left: 12px; gap: 6px; }
    .ctrl-btn { padding: 6px 10px; font-size: 11px; min-height: 32px; }
    .ctrl-btn .label { display: none; }
    .key-hint { display: none; }
    .nav { bottom: 16px; padding: 6px 14px; }
    .nav-btn { width: 32px; height: 32px; font-size: 16px; }
    .tree { font-size: 11px; padding: 14px 16px; overflow-x: auto; white-space: pre; }
    .quote-block { padding: 12px 16px; }
    .quote-block p { font-size: 13px; }
    .highlight-box { padding: 14px 16px; }
    .highlight-box p { font-size: 13px; }
    .flow-step { font-size: 12px; padding: 8px 12px; }
    .auto-layer { padding: 14px 12px; }
    .auto-layer .al-icon { font-size: 24px; }
    .card { padding: 16px; }
  }

  @media (max-width: 480px) {
    h1 { font-size: 26px; }
    h2 { font-size: 19px; }
    .slide { padding: 60px 14px 100px; }
  }
</style>
</head>
<body>

<div id="progress-bar"></div>

<!-- Controls -->
<div class="controls">
  <button class="ctrl-btn" id="btn-theme" onclick="toggleTheme()" aria-label="Toggle theme">
    <span id="theme-icon">🌙</span>
    <span class="label" id="theme-label">Dark</span>
  </button>
  <button class="ctrl-btn" id="btn-lang" onclick="toggleLang()" aria-label="Toggle language">
    <span>🌐</span>
    <span class="label" id="lang-label">EN</span>
  </button>
</div>

<div class="slides-container" id="slides">

<!-- 1: Cover -->
<div class="slide" data-slide="1">
<div class="lang-en">
# Hello **world**
- one
- two

A paragraph with \`code\` and [link](http://x.y).

</div>
<div class="lang-zh">
你好，**世界**

</div>
<span class="slide-number"> / 3</span>
</div>

<!-- 2: Cards -->
<div class="slide" data-slide="2">
<div class="cards cards-2">

<div class="card">
<h3><span class="lang-en">A</span><span class="lang-zh">甲</span></h3>
<p><span class="lang-en">alpha</span><span class="lang-zh">阿尔法</span></p>
</div>

<div class="card">
<h3><span class="lang-en">B</span><span class="lang-zh">乙</span></h3>
<p><span class="lang-en">beta</span><span class="lang-zh">贝塔</span></p>
</div>

</div>
<span class="slide-number"> / 3</span>
</div>

<!-- 3: Quote -->
<div class="slide" data-slide="3">
<div class="quote-block">
<p><span class="lang-en">To be &lt;or&gt; not</span><span class="lang-zh">生存还是毁灭</span></p>
</div>
<span class="slide-number"> / 3</span>
</div>

</div>

<!-- Nav -->
<div class="nav">
  <button class="nav-btn" id="btn-prev" onclick="navigate(-1)" aria-label="Previous slide">‹</button>
  <span class="nav-info" id="nav-info">1 / 3</span>
  <button class="nav-btn" id="btn-next" onclick="navigate(1)" aria-label="Next slide">›</button>
</div>
<div class="key-hint">
  <span><kbd>←</kbd> <kbd>→</kbd> <span class="lang-en">Navigate</span><span class="lang-zh">翻页</span></span>
  <span><kbd>F</kbd> <span class="lang-en">Fullscreen</span><span class="lang-zh">全屏</span></span>
  <span><kbd>T</kbd> <span class="lang-en">Theme</span><span class="lang-zh">主题</span></span>
  <span><kbd>L</kbd> <span class="lang-en">Lang</span><span class="lang-zh">语言</span></span>
</div>

<script>
  const slides = document.querySelectorAll('.slide');
  const total = slides.length;
  let current = 0;

  function showSlide(i) {
    slides.forEach((s, idx) => {
      s.classList.remove('active', 'exit-up');
      if (idx < i) s.classList.add('exit-up');
    });
    slides[i].classList.add('active');
    document.getElementById('nav-info').textContent = \`\${i + 1} / \${total}\`;
    document.getElementById('btn-prev').disabled = i === 0;
    document.getElementById('btn-next').disabled = i === total - 1;
    document.getElementById('progress-bar').style.width = \`\${((i + 1) / total) * 100}%\`;
  }

  function navigate(dir) {
    const next = current + dir;
    if (next >= 0 && next < total) { current = next; showSlide(current); }
  }

  // Theme toggle
  function applyTheme(theme) {
    document.documentElement.setAttribute('data-theme', theme);
    document.getElementById('theme-icon').textContent = theme === 'dark' ? '🌙' : '☀️';
    document.getElementById('theme-label').textContent = theme === 'dark' ? 'Dark' : 'Light';
    try { localStorage.setItem('roll-slides-theme', theme); } catch (e) {}
  }
  function toggleTheme() {
    const cur = document.documentElement.getAttribute('data-theme') || 'dark';
    applyTheme(cur === 'dark' ? 'light' : 'dark');
  }

  // Language toggle
  function applyLang(lang) {
    document.documentElement.setAttribute('data-lang', lang);
    document.documentElement.setAttribute('lang', lang === 'zh' ? 'zh-CN' : 'en');
    document.getElementById('lang-label').textContent = lang === 'en' ? 'EN' : '中文';
    try { localStorage.setItem('roll-slides-lang', lang); } catch (e) {}
  }
  function toggleLang() {
    const cur = document.documentElement.getAttribute('data-lang') || 'en';
    applyLang(cur === 'en' ? 'zh' : 'en');
  }

  // Restore preferences
  try {
    const savedTheme = localStorage.getItem('roll-slides-theme');
    if (savedTheme === 'light' || savedTheme === 'dark') applyTheme(savedTheme);
    const savedLang = localStorage.getItem('roll-slides-lang');
    if (savedLang === 'en' || savedLang === 'zh') applyLang(savedLang);
    else {
      // Auto-detect: prefer ZH if browser is Chinese
      const nav = (navigator.language || '').toLowerCase();
      if (nav.startsWith('zh')) applyLang('zh');
    }
  } catch (e) {}

  document.addEventListener('keydown', (e) => {
    if (e.key === 'ArrowRight' || e.key === 'ArrowDown' || e.key === ' ') { e.preventDefault(); navigate(1); }
    else if (e.key === 'ArrowLeft' || e.key === 'ArrowUp') { e.preventDefault(); navigate(-1); }
    else if (e.key === 'f' || e.key === 'F') {
      document.fullscreenElement ? document.exitFullscreen() : document.documentElement.requestFullscreen();
    }
    else if (e.key === 't' || e.key === 'T') { toggleTheme(); }
    else if (e.key === 'l' || e.key === 'L') { toggleLang(); }
  });

  // Touch swipe
  let tx = 0, ty = 0;
  document.addEventListener('touchstart', e => {
    tx = e.touches[0].clientX; ty = e.touches[0].clientY;
  }, { passive: true });
  document.addEventListener('touchend', e => {
    const dx = tx - e.changedTouches[0].clientX;
    const dy = ty - e.changedTouches[0].clientY;
    // Only treat as swipe when horizontal movement dominates and is significant
    if (Math.abs(dx) > 60 && Math.abs(dx) > Math.abs(dy) * 1.5) navigate(dx > 0 ? 1 : -1);
  }, { passive: true });

  showSlide(0);
</script>
</body>
</html>
"
`;

exports[`diff-test: roll slides == bash oracle > build CJK deck → identical HTML + Rendered note (zh, F9) 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "[roll] 渲染完成 → .roll/slides/反馈闭环.html
",
}
`;

exports[`diff-test: roll slides == bash oracle > build CJK deck → identical HTML + Rendered note (zh, F9) 2`] = `
"<!DOCTYPE html>
<html lang="en" data-theme="dark" data-lang="en">
<head>
<meta charset="UTF-8">
<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
<title>Feedback Loop</title>
<meta name="title-zh" content="反馈闭环">
<meta name="deck-slug" content="反馈闭环">
<style>
  @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Noto+Sans+SC:wght@300;400;500;600;700;900&display=swap');

  :root {
    --bg: #0a0a0f;
    --bg-card: #12121a;
    --bg-card-hover: #1a1a28;
    --bg-control: rgba(18,18,26,0.92);
    --text: #e8e8ef;
    --text-dim: #8888a0;
    --text-bright: #ffffff;
    --accent: #6366f1;
    --accent-light: #818cf8;
    --green: #22c55e;
    --green-text: #4ade80;
    --orange: #f59e0b;
    --orange-text: #fbbf24;
    --red: #ef4444;
    --red-text: #f87171;
    --cyan: #06b6d4;
    --cyan-text: #22d3ee;
    --border: rgba(255,255,255,0.06);
    --border-strong: rgba(255,255,255,0.12);
    --shadow: 0 4px 24px rgba(0,0,0,0.3);
    --radius: 16px;
  }

  [data-theme="light"] {
    --bg: #fafafc;
    --bg-card: #ffffff;
    --bg-card-hover: #f3f4f8;
    --bg-control: rgba(255,255,255,0.95);
    --text: #1f2937;
    --text-dim: #6b7280;
    --text-bright: #0a0a0f;
    --accent: #6366f1;
    --accent-light: #4f46e5;
    --green: #16a34a;
    --green-text: #15803d;
    --orange: #d97706;
    --orange-text: #b45309;
    --red: #dc2626;
    --red-text: #b91c1c;
    --cyan: #0891b2;
    --cyan-text: #0e7490;
    --border: rgba(15,23,42,0.08);
    --border-strong: rgba(15,23,42,0.14);
    --shadow: 0 4px 24px rgba(15,23,42,0.06);
  }

  * { margin: 0; padding: 0; box-sizing: border-box; }

  html, body {
    font-family: 'Inter', 'Noto Sans SC', system-ui, sans-serif;
    background: var(--bg);
    color: var(--text);
    height: 100%;
    width: 100%;
    overflow: hidden;
    transition: background 0.3s ease, color 0.3s ease;
  }

  /* Language switching: only show the active language */
  [data-lang="en"] .lang-zh { display: none !important; }
  [data-lang="zh"] .lang-en { display: none !important; }

  #progress-bar {
    position: fixed; top: 0; left: 0; height: 3px;
    background: linear-gradient(90deg, var(--accent), var(--cyan));
    z-index: 1000; transition: width 0.4s ease;
  }

  .slides-container { position: relative; width: 100vw; height: 100vh; }

  .slide {
    position: absolute; inset: 0;
    display: flex; flex-direction: column;
    justify-content: center; align-items: center;
    padding: 64px 80px 96px;
    opacity: 0; transform: translateY(30px);
    transition: opacity 0.5s ease, transform 0.5s ease;
    pointer-events: none; overflow-y: auto;
  }
  .slide.active { opacity: 1; transform: translateY(0); pointer-events: auto; }
  .slide.exit-up { opacity: 0; transform: translateY(-30px); }

  .slide-number {
    position: absolute; top: 28px; right: 24px;
    font-size: 13px; color: var(--text-dim); font-weight: 500;
  }

  .tag {
    display: inline-block; padding: 5px 14px;
    background: rgba(99,102,241,0.12); color: var(--accent-light);
    border-radius: 20px; font-size: 12px; font-weight: 600;
    letter-spacing: 0.06em; text-transform: uppercase; margin-bottom: 16px;
  }
  [data-theme="light"] .tag { background: rgba(99,102,241,0.1); }

  h1 {
    font-size: 52px; font-weight: 800; line-height: 1.15;
    color: var(--text-bright); text-align: center; margin-bottom: 12px;
  }
  h1 .gradient {
    background: linear-gradient(135deg, var(--accent-light), var(--cyan));
    -webkit-background-clip: text; -webkit-text-fill-color: transparent;
  }
  h2 {
    font-size: 34px; font-weight: 700; line-height: 1.25;
    color: var(--text-bright); margin-bottom: 12px; text-align: center;
  }
  h3 { font-size: 18px; font-weight: 600; color: var(--text-bright); margin-bottom: 6px; }
  strong { color: var(--text-bright); }

  .subtitle {
    font-size: 18px; color: var(--text-dim); line-height: 1.6;
    text-align: center; max-width: 720px;
  }
  .section-desc {
    font-size: 15px; color: var(--text-dim); line-height: 1.7;
    max-width: 820px; margin-bottom: 24px; text-align: center;
  }

  .cards { display: grid; gap: 14px; width: 100%; max-width: 1100px; }
  .cards-2 { grid-template-columns: 1fr 1fr; }
  .cards-3 { grid-template-columns: 1fr 1fr 1fr; }
  .cards-4 { grid-template-columns: repeat(4, 1fr); }

  .card {
    background: var(--bg-card); border: 1px solid var(--border);
    border-radius: var(--radius); padding: 20px 20px;
    transition: all 0.3s ease;
    box-shadow: var(--shadow);
  }
  .card:hover { background: var(--bg-card-hover); transform: translateY(-2px); }
  .card p { font-size: 13px; color: var(--text-dim); line-height: 1.6; }
  .card .small { font-size: 11px; }

  .metric-row {
    display: flex; gap: 14px; width: 100%; max-width: 1000px;
    justify-content: center; margin-top: 8px;
  }
  .metric {
    text-align: center; padding: 20px 14px;
    background: var(--bg-card); border: 1px solid var(--border);
    border-radius: var(--radius); flex: 1;
    box-shadow: var(--shadow);
  }
  .metric .number { font-size: 32px; font-weight: 800; line-height: 1; margin-bottom: 6px; }
  .metric .label { font-size: 12px; color: var(--text-dim); font-weight: 500; }

  .compare {
    display: grid; grid-template-columns: 1fr 50px 1fr;
    gap: 0; width: 100%; max-width: 1000px; align-items: start;
  }
  .compare-col { padding: 22px 20px; border-radius: var(--radius); }
  .compare-before { background: rgba(239,68,68,0.06); border: 1px solid rgba(239,68,68,0.18); }
  .compare-after { background: rgba(34,197,94,0.06); border: 1px solid rgba(34,197,94,0.18); }
  [data-theme="light"] .compare-before { background: rgba(239,68,68,0.04); }
  [data-theme="light"] .compare-after { background: rgba(34,197,94,0.04); }
  .compare-arrow {
    display: flex; align-items: center; justify-content: center;
    font-size: 24px; color: var(--text-dim); padding-top: 36px;
  }
  .compare-col h3 { margin-bottom: 14px; font-size: 15px; }
  .compare-item {
    display: flex; align-items: flex-start; gap: 8px;
    margin-bottom: 10px; font-size: 13px; line-height: 1.5; color: var(--text);
  }
  .compare-item .icon { flex-shrink: 0; font-size: 13px; margin-top: 2px; }

  .pipeline-bar {
    display: flex; gap: 4px; width: 100%; max-width: 1000px; margin-top: 8px;
  }
  .pipe-stage {
    flex: 1; text-align: center; padding: 14px 8px; border-radius: 12px;
  }
  .pipe-stage h4 { font-size: 16px; font-weight: 700; }
  .pipe-stage p { font-size: 11px; color: var(--text-dim); margin-top: 4px; line-height: 1.4; }
  .pipe-idea, .pipe-backlog { background: rgba(99,102,241,0.08); border: 1.5px solid rgba(99,102,241,0.3); }
  .pipe-idea h4, .pipe-backlog h4 { color: var(--accent-light); }
  .pipe-build { background: rgba(34,197,94,0.08); border: 1.5px solid rgba(34,197,94,0.3); }
  .pipe-build h4 { color: var(--green-text); }
  .pipe-verify { background: rgba(245,158,11,0.08); border: 1.5px solid rgba(245,158,11,0.3); }
  .pipe-verify h4 { color: var(--orange-text); }
  .pipe-release { background: rgba(6,182,212,0.08); border: 1.5px solid rgba(6,182,212,0.3); }
  .pipe-release h4 { color: var(--cyan-text); }
  .pipe-arrow { display: flex; align-items: center; justify-content: center; font-size: 16px; color: var(--text-dim); padding: 0 2px; }

  /* Human-AI bar */
  .hai-bar { display: flex; gap: 4px; width: 100%; max-width: 1000px; margin-top: 8px; }
  .hai-zone { text-align: center; padding: 14px 10px; border-radius: 12px; }
  .hai-zone .emoji { font-size: 20px; }
  .hai-zone h4 { font-size: 14px; font-weight: 700; margin-top: 4px; }
  .hai-zone p { font-size: 11px; color: var(--text-dim); margin-top: 4px; line-height: 1.5; }
  .hai-human { flex: 2; background: rgba(99,102,241,0.06); border: 1px solid rgba(99,102,241,0.18); }
  .hai-human h4 { color: var(--accent-light); }
  .hai-ai { flex: 2; background: rgba(34,197,94,0.06); border: 1px solid rgba(34,197,94,0.18); }
  .hai-ai h4 { color: var(--green-text); }
  .hai-push { flex: 1; background: rgba(245,158,11,0.06); border: 1px solid rgba(245,158,11,0.18); }
  .hai-push h4 { color: var(--orange-text); }

  .quote-block {
    border-left: 3px solid var(--accent);
    padding: 14px 22px; margin: 14px 0;
    background: rgba(99,102,241,0.06);
    border-radius: 0 10px 10px 0; max-width: 720px;
  }
  .quote-block p { font-size: 15px; font-style: italic; color: var(--text); line-height: 1.6; }

  .highlight-box {
    background: linear-gradient(135deg, rgba(99,102,241,0.1), rgba(6,182,212,0.1));
    border: 1px solid rgba(99,102,241,0.2);
    border-radius: var(--radius); padding: 20px 24px; max-width: 820px; text-align: center;
  }
  .highlight-box p { font-size: 14px; color: var(--text); line-height: 1.6; }

  .analogy {
    background: rgba(245,158,11,0.06); border: 1px solid rgba(245,158,11,0.18);
    border-radius: var(--radius); padding: 14px 20px; max-width: 820px; margin-top: 14px;
  }
  .analogy-label {
    font-size: 11px; font-weight: 700; color: var(--orange-text);
    text-transform: uppercase; letter-spacing: 0.08em; margin-bottom: 5px;
  }
  .analogy p { font-size: 13px; line-height: 1.6; color: var(--text); }

  .flow-row {
    display: flex; align-items: center; gap: 8px;
    flex-wrap: wrap; justify-content: center;
  }
  .flow-step {
    padding: 10px 16px; border-radius: 10px;
    font-size: 13px; font-weight: 600;
  }
  .flow-arrow { font-size: 16px; color: var(--text-dim); }
  .flow-branch { display: flex; flex-direction: column; gap: 6px; align-items: center; }

  .timeline {
    width: 100%; max-width: 880px; position: relative; padding-left: 36px;
  }
  .timeline::before {
    content: ''; position: absolute; left: 12px; top: 0; bottom: 0;
    width: 2px; background: var(--border-strong);
  }
  .timeline-item { position: relative; margin-bottom: 14px; padding-left: 24px; }
  .timeline-item::before {
    content: ''; position: absolute; left: -30px; top: 5px;
    width: 10px; height: 10px; border-radius: 50%;
    background: var(--accent); box-shadow: 0 0 10px rgba(99,102,241,0.3);
  }
  .timeline-item h4 { font-size: 14px; font-weight: 700; color: var(--text-bright); margin-bottom: 3px; }
  .timeline-item p { font-size: 12.5px; color: var(--text-dim); line-height: 1.5; }

  /* Skill table */
  .skill-table {
    width: 100%; max-width: 1060px; border-collapse: collapse; margin-top: 8px;
  }
  .skill-table th {
    text-align: left; font-size: 11px; font-weight: 700; color: var(--text-dim);
    text-transform: uppercase; letter-spacing: 0.06em;
    padding: 6px 10px; border-bottom: 1px solid var(--border-strong);
  }
  .skill-table td {
    padding: 7px 10px; font-size: 12.5px; color: var(--text);
    border-bottom: 1px solid var(--border); vertical-align: top;
  }
  [data-theme="dark"] .skill-table tr:hover td { background: rgba(255,255,255,0.02); }
  [data-theme="light"] .skill-table tr:hover td { background: rgba(15,23,42,0.02); }
  .skill-name {
    font-family: 'SF Mono', 'Fira Code', monospace; font-weight: 600;
    font-size: 12px; white-space: nowrap;
  }
  .phase-tag {
    font-size: 10px; padding: 2px 7px; border-radius: 4px; font-weight: 600;
    display: inline-block;
  }
  .phase-design { background: rgba(99,102,241,0.15); color: var(--accent-light); }
  .phase-build { background: rgba(34,197,94,0.15); color: var(--green-text); }
  .phase-check { background: rgba(245,158,11,0.15); color: var(--orange-text); }
  .phase-auto { background: rgba(6,182,212,0.15); color: var(--cyan-text); }
  .phase-support { background: rgba(255,255,255,0.06); color: var(--text-dim); }
  [data-theme="light"] .phase-support { background: rgba(15,23,42,0.06); }

  /* Autonomous layers */
  .auto-layers {
    display: flex; gap: 12px; width: 100%; max-width: 1000px; margin-top: 8px;
  }
  .auto-layer {
    flex: 1; text-align: center; padding: 18px 14px; border-radius: var(--radius);
    background: var(--bg-card); border: 1px solid var(--border);
    box-shadow: var(--shadow);
  }
  .auto-layer .al-icon { font-size: 28px; }
  .auto-layer h4 { font-size: 14px; font-weight: 700; color: var(--text-bright); margin-top: 6px; }
  .auto-layer p { font-size: 12px; color: var(--text-dim); margin-top: 6px; line-height: 1.5; }
  .auto-layer .al-skills {
    font-size: 10px; color: var(--text-dim); margin-top: 8px;
    font-family: 'SF Mono', 'Fira Code', monospace;
  }

  .tree {
    font-family: 'SF Mono', 'Fira Code', monospace;
    font-size: 13px; line-height: 1.7; color: var(--text);
    background: var(--bg-card); border: 1px solid var(--border);
    border-radius: var(--radius); padding: 20px 24px;
    max-width: 720px; width: 100%;
    box-shadow: var(--shadow);
  }
  .tree .comment { color: var(--text-dim); }
  .tree .file { color: var(--cyan-text); }
  .tree .dir { color: var(--accent-light); }

  .skill-tag {
    font-size: 11px; padding: 4px 8px; border-radius: 6px;
    font-weight: 600; font-family: 'SF Mono', 'Fira Code', monospace;
    background: rgba(99,102,241,0.15); color: var(--accent-light);
  }

  /* Loop overview pills */
  .loops-row {
    display: flex; gap: 4px; width: 100%; max-width: 1000px; margin-top: 12px;
  }
  .loop-pill {
    flex: 1; text-align: center; padding: 8px 6px; border-radius: 8px;
    border: 1px dashed;
  }
  .loop-pill.la { border-color: rgba(99,102,241,0.4); background: rgba(99,102,241,0.04); }
  .loop-pill.lb { border-color: rgba(34,197,94,0.4); background: rgba(34,197,94,0.04); }
  .loop-pill.lc { border-color: rgba(245,158,11,0.4); background: rgba(245,158,11,0.04); }
  .loop-pill h5 { font-size: 12px; font-weight: 700; }
  .loop-pill.la h5 { color: var(--accent-light); }
  .loop-pill.lb h5 { color: var(--green-text); }
  .loop-pill.lc h5 { color: var(--orange-text); }
  .loop-pill p { font-size: 10px; color: var(--text-dim); margin-top: 2px; }

  /* Controls (theme + lang) */
  .controls {
    position: fixed; top: 18px; left: 18px;
    display: flex; gap: 8px; z-index: 200;
  }
  .ctrl-btn {
    background: var(--bg-control); backdrop-filter: blur(20px);
    border: 1px solid var(--border-strong);
    color: var(--text); font-size: 12px; font-weight: 600;
    padding: 8px 14px; border-radius: 24px; cursor: pointer;
    display: flex; align-items: center; gap: 6px;
    transition: all 0.2s;
    min-height: 36px;
  }
  .ctrl-btn:hover { transform: translateY(-1px); border-color: var(--accent-light); }
  .ctrl-btn svg { width: 14px; height: 14px; }
  .ctrl-btn .label { font-size: 12px; }

  /* Nav */
  .nav {
    position: fixed; bottom: 24px; left: 50%; transform: translateX(-50%);
    display: flex; align-items: center; gap: 14px; z-index: 100;
    background: var(--bg-control); backdrop-filter: blur(20px);
    padding: 8px 18px; border-radius: 40px; border: 1px solid var(--border-strong);
  }
  .nav-btn {
    width: 36px; height: 36px; border-radius: 50%;
    background: rgba(127,127,127,0.08); border: 1px solid var(--border-strong);
    color: var(--text); font-size: 18px; cursor: pointer;
    display: flex; align-items: center; justify-content: center; transition: all 0.2s;
  }
  .nav-btn:hover { background: rgba(127,127,127,0.16); }
  .nav-btn:disabled { opacity: 0.3; cursor: default; }
  .nav-info { font-size: 12px; color: var(--text-dim); font-weight: 500; min-width: 50px; text-align: center; }

  .key-hint {
    position: fixed; bottom: 32px; right: 24px;
    font-size: 11px; color: var(--text-dim); display: flex; gap: 10px; z-index: 100;
  }
  .key-hint kbd {
    background: rgba(127,127,127,0.1); border: 1px solid var(--border-strong);
    padding: 1px 6px; border-radius: 3px; font-family: inherit;
  }

  .fade-in { opacity: 0; transform: translateY(16px); }
  .slide.active .fade-in { animation: fadeUp 0.5s ease forwards; }
  .slide.active .fade-in:nth-child(2) { animation-delay: 0.06s; }
  .slide.active .fade-in:nth-child(3) { animation-delay: 0.12s; }
  .slide.active .fade-in:nth-child(4) { animation-delay: 0.18s; }
  .slide.active .fade-in:nth-child(5) { animation-delay: 0.24s; }
  .slide.active .fade-in:nth-child(6) { animation-delay: 0.30s; }
  @keyframes fadeUp { to { opacity: 1; transform: translateY(0); } }

  .slide::-webkit-scrollbar { width: 4px; }
  .slide::-webkit-scrollbar-thumb { background: var(--border-strong); border-radius: 2px; }

  /* Mobile adaptation */
  @media (max-width: 900px) {
    .slide { padding: 64px 18px 110px; justify-content: flex-start; }
    h1 { font-size: 30px; }
    h2 { font-size: 22px; line-height: 1.3; }
    h3 { font-size: 15px; }
    .subtitle { font-size: 15px; }
    .section-desc { font-size: 13px; margin-bottom: 16px; }
    .tag { font-size: 11px; padding: 4px 11px; margin-bottom: 12px; }
    .cards-2, .cards-3, .cards-4 { grid-template-columns: 1fr; }
    .compare { grid-template-columns: 1fr; gap: 12px; }
    .compare-arrow { transform: rotate(90deg); padding: 0; }
    .pipeline-bar { flex-direction: column; }
    .pipe-arrow { transform: rotate(90deg); padding: 4px 0; }
    .hai-bar { flex-direction: column; }
    .auto-layers { flex-direction: column; }
    .loops-row { flex-direction: column; }
    .metric-row { flex-direction: column; }
    .timeline { padding-left: 28px; }
    .timeline-item { padding-left: 16px; }
    .skill-table { font-size: 11px; }
    .skill-table th:nth-child(2), .skill-table td:nth-child(2) { display: none; }
    .slide-number { top: 16px; right: 16px; font-size: 11px; }
    .controls { top: 12px; left: 12px; gap: 6px; }
    .ctrl-btn { padding: 6px 10px; font-size: 11px; min-height: 32px; }
    .ctrl-btn .label { display: none; }
    .key-hint { display: none; }
    .nav { bottom: 16px; padding: 6px 14px; }
    .nav-btn { width: 32px; height: 32px; font-size: 16px; }
    .tree { font-size: 11px; padding: 14px 16px; overflow-x: auto; white-space: pre; }
    .quote-block { padding: 12px 16px; }
    .quote-block p { font-size: 13px; }
    .highlight-box { padding: 14px 16px; }
    .highlight-box p { font-size: 13px; }
    .flow-step { font-size: 12px; padding: 8px 12px; }
    .auto-layer { padding: 14px 12px; }
    .auto-layer .al-icon { font-size: 24px; }
    .card { padding: 16px; }
  }

  @media (max-width: 480px) {
    h1 { font-size: 26px; }
    h2 { font-size: 19px; }
    .slide { padding: 60px 14px 100px; }
  }
</style>
</head>
<body>

<div id="progress-bar"></div>

<!-- Controls -->
<div class="controls">
  <button class="ctrl-btn" id="btn-theme" onclick="toggleTheme()" aria-label="Toggle theme">
    <span id="theme-icon">🌙</span>
    <span class="label" id="theme-label">Dark</span>
  </button>
  <button class="ctrl-btn" id="btn-lang" onclick="toggleLang()" aria-label="Toggle language">
    <span>🌐</span>
    <span class="label" id="lang-label">EN</span>
  </button>
</div>

<div class="slides-container" id="slides">

<!-- 1: Cover -->
<div class="slide" data-slide="1">
<div class="lang-en">
# Hello **world**
- one
- two

A paragraph with \`code\` and [link](http://x.y).

</div>
<div class="lang-zh">
你好，**世界**

</div>
<span class="slide-number"> / 3</span>
</div>

<!-- 2: Cards -->
<div class="slide" data-slide="2">
<div class="cards cards-2">

<div class="card">
<h3><span class="lang-en">A</span><span class="lang-zh">甲</span></h3>
<p><span class="lang-en">alpha</span><span class="lang-zh">阿尔法</span></p>
</div>

<div class="card">
<h3><span class="lang-en">B</span><span class="lang-zh">乙</span></h3>
<p><span class="lang-en">beta</span><span class="lang-zh">贝塔</span></p>
</div>

</div>
<span class="slide-number"> / 3</span>
</div>

<!-- 3: Quote -->
<div class="slide" data-slide="3">
<div class="quote-block">
<p><span class="lang-en">To be &lt;or&gt; not</span><span class="lang-zh">生存还是毁灭</span></p>
</div>
<span class="slide-number"> / 3</span>
</div>

</div>

<!-- Nav -->
<div class="nav">
  <button class="nav-btn" id="btn-prev" onclick="navigate(-1)" aria-label="Previous slide">‹</button>
  <span class="nav-info" id="nav-info">1 / 3</span>
  <button class="nav-btn" id="btn-next" onclick="navigate(1)" aria-label="Next slide">›</button>
</div>
<div class="key-hint">
  <span><kbd>←</kbd> <kbd>→</kbd> <span class="lang-en">Navigate</span><span class="lang-zh">翻页</span></span>
  <span><kbd>F</kbd> <span class="lang-en">Fullscreen</span><span class="lang-zh">全屏</span></span>
  <span><kbd>T</kbd> <span class="lang-en">Theme</span><span class="lang-zh">主题</span></span>
  <span><kbd>L</kbd> <span class="lang-en">Lang</span><span class="lang-zh">语言</span></span>
</div>

<script>
  const slides = document.querySelectorAll('.slide');
  const total = slides.length;
  let current = 0;

  function showSlide(i) {
    slides.forEach((s, idx) => {
      s.classList.remove('active', 'exit-up');
      if (idx < i) s.classList.add('exit-up');
    });
    slides[i].classList.add('active');
    document.getElementById('nav-info').textContent = \`\${i + 1} / \${total}\`;
    document.getElementById('btn-prev').disabled = i === 0;
    document.getElementById('btn-next').disabled = i === total - 1;
    document.getElementById('progress-bar').style.width = \`\${((i + 1) / total) * 100}%\`;
  }

  function navigate(dir) {
    const next = current + dir;
    if (next >= 0 && next < total) { current = next; showSlide(current); }
  }

  // Theme toggle
  function applyTheme(theme) {
    document.documentElement.setAttribute('data-theme', theme);
    document.getElementById('theme-icon').textContent = theme === 'dark' ? '🌙' : '☀️';
    document.getElementById('theme-label').textContent = theme === 'dark' ? 'Dark' : 'Light';
    try { localStorage.setItem('roll-slides-theme', theme); } catch (e) {}
  }
  function toggleTheme() {
    const cur = document.documentElement.getAttribute('data-theme') || 'dark';
    applyTheme(cur === 'dark' ? 'light' : 'dark');
  }

  // Language toggle
  function applyLang(lang) {
    document.documentElement.setAttribute('data-lang', lang);
    document.documentElement.setAttribute('lang', lang === 'zh' ? 'zh-CN' : 'en');
    document.getElementById('lang-label').textContent = lang === 'en' ? 'EN' : '中文';
    try { localStorage.setItem('roll-slides-lang', lang); } catch (e) {}
  }
  function toggleLang() {
    const cur = document.documentElement.getAttribute('data-lang') || 'en';
    applyLang(cur === 'en' ? 'zh' : 'en');
  }

  // Restore preferences
  try {
    const savedTheme = localStorage.getItem('roll-slides-theme');
    if (savedTheme === 'light' || savedTheme === 'dark') applyTheme(savedTheme);
    const savedLang = localStorage.getItem('roll-slides-lang');
    if (savedLang === 'en' || savedLang === 'zh') applyLang(savedLang);
    else {
      // Auto-detect: prefer ZH if browser is Chinese
      const nav = (navigator.language || '').toLowerCase();
      if (nav.startsWith('zh')) applyLang('zh');
    }
  } catch (e) {}

  document.addEventListener('keydown', (e) => {
    if (e.key === 'ArrowRight' || e.key === 'ArrowDown' || e.key === ' ') { e.preventDefault(); navigate(1); }
    else if (e.key === 'ArrowLeft' || e.key === 'ArrowUp') { e.preventDefault(); navigate(-1); }
    else if (e.key === 'f' || e.key === 'F') {
      document.fullscreenElement ? document.exitFullscreen() : document.documentElement.requestFullscreen();
    }
    else if (e.key === 't' || e.key === 'T') { toggleTheme(); }
    else if (e.key === 'l' || e.key === 'L') { toggleLang(); }
  });

  // Touch swipe
  let tx = 0, ty = 0;
  document.addEventListener('touchstart', e => {
    tx = e.touches[0].clientX; ty = e.touches[0].clientY;
  }, { passive: true });
  document.addEventListener('touchend', e => {
    const dx = tx - e.changedTouches[0].clientX;
    const dy = ty - e.changedTouches[0].clientY;
    // Only treat as swipe when horizontal movement dominates and is significant
    if (Math.abs(dx) > 60 && Math.abs(dx) > Math.abs(dy) * 1.5) navigate(dx > 0 ? 1 : -1);
  }, { passive: true });

  showSlide(0);
</script>
</body>
</html>
"
`;

exports[`diff-test: roll slides == bash oracle > build invalid deck → [FAIL] + exit 1 (en) 1`] = `
{
  "status": 1,
  "stderr": "[slides-validate] slide 1 (deck.md:9): missing or empty title_zh
[FAIL] Validation failed for .roll/slides/bad/deck.md
  Hint: fix the issues above in .roll/slides/bad/deck.md and re-run 'roll slides build bad'
",
  "stdout": "",
}
`;

exports[`diff-test: roll slides == bash oracle > build invalid deck → [FAIL] + exit 1 (zh) 1`] = `
{
  "status": 1,
  "stderr": "[slides-validate] slide 1 (deck.md:9): missing or empty title_zh
[FAIL] 校验失败：.roll/slides/bad/deck.md
  提示：请按上方提示修复 .roll/slides/bad/deck.md，然后重新运行 'roll slides build bad'
",
  "stdout": "",
}
`;

exports[`diff-test: roll slides == bash oracle > build missing deck → err + exit 1 (en) 1`] = `
{
  "status": 1,
  "stderr": "[roll] Deck not found: .roll/slides/ghost/deck.md
[EN:  未找到 deck 文件：.roll/slides/ghost/deck.md...]
  Hint: run 'roll slides new "<topic>"' to generate a new deck.
[EN:  提示：先运行 'roll slides new "<主题>"' 生成新的幻灯片。...]
",
  "stdout": "",
}
`;

exports[`diff-test: roll slides == bash oracle > build missing deck → err + exit 1 (zh) 1`] = `
{
  "status": 1,
  "stderr": "[roll] Deck not found: .roll/slides/ghost/deck.md
  未找到 deck 文件：.roll/slides/ghost/deck.md
  Hint: run 'roll slides new "<topic>"' to generate a new deck.
  提示：先运行 'roll slides new "<主题>"' 生成新的幻灯片。
",
  "stdout": "",
}
`;

exports[`diff-test: roll slides == bash oracle > build no slug → usage + exit 1 (en) 1`] = `
{
  "status": 1,
  "stderr": "[roll] Usage: roll slides build <slug> [--no-open]
Usage: roll slides build <slug> [--no-open]
",
  "stdout": "",
}
`;

exports[`diff-test: roll slides == bash oracle > build no slug → usage + exit 1 (zh) 1`] = `
{
  "status": 1,
  "stderr": "[roll] Usage: roll slides build <slug> [--no-open]
用法: roll slides build <slug> [--no-open]
",
  "stdout": "",
}
`;

exports[`diff-test: roll slides == bash oracle > build unexpected extra arg → exit 1 1`] = `
{
  "status": 1,
  "stderr": "[roll] Unexpected argument: 
",
  "stdout": "",
}
`;

exports[`diff-test: roll slides == bash oracle > build unknown option → exit 1 1`] = `
{
  "status": 1,
  "stderr": "[roll] Unknown option: 
",
  "stdout": "",
}
`;

exports[`diff-test: roll slides == bash oracle > build unknown template → [FAIL] + template listing 1`] = `
{
  "status": 1,
  "stderr": "[FAIL] Template not found: nonexistent-tpl
  Available templates:
    introduction-v3      (builtin)
    pitch                (builtin)
  Hint: 'roll slides templates' lists all installed templates
",
  "stdout": "",
}
`;

exports[`diff-test: roll slides == bash oracle > delete --force removes deck dir + html 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "[roll] Deleted doomed
",
}
`;

exports[`diff-test: roll slides == bash oracle > delete deck-not-found → err + exit 1 1`] = `
{
  "status": 1,
  "stderr": "[roll] Deck not found: ghost
",
  "stdout": "",
}
`;

exports[`diff-test: roll slides == bash oracle > delete no slug → usage + exit 1 1`] = `
{
  "status": 1,
  "stderr": "[roll] Usage: roll slides delete <slug> [--force]
Usage: roll slides delete <slug> [--force]
",
  "stdout": "",
}
`;

exports[`diff-test: roll slides == bash oracle > list 4-state table with CJK slug (en) 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "slug                  template              total_slides  created       built     size
----                  --------              ------------  -------       ------    ----
alpha                 introduction-v3       3             2026-06-05    ✗ unbuilt  -
failed-one            introduction-v3       3             2026-06-05    ⚠ failed  -
反馈闭环          introduction-v3       3             2026-06-05    ✗ unbuilt  -
",
}
`;

exports[`diff-test: roll slides == bash oracle > list 4-state table with CJK slug (zh) 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "slug                  template              total_slides  created       built     size
----                  --------              ------------  -------       ------    ----
alpha                 introduction-v3       3             2026-06-05    ✗ unbuilt  -
failed-one            introduction-v3       3             2026-06-05    ⚠ failed  -
反馈闭环          introduction-v3       3             2026-06-05    ✗ unbuilt  -
",
}
`;

exports[`diff-test: roll slides == bash oracle > list built deck shows ✓ built + size 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "slug                  template              total_slides  created       built     size
----                  --------              ------------  -------       ------    ----
built-deck            introduction-v3       3             2026-06-05    ✓ built  23.4K
",
}
`;

exports[`diff-test: roll slides == bash oracle > list no slides dir → note (en) 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "[roll] No decks found under .roll/slides/
  Hint: run 'roll slides new "<topic>"' to create one.
[EN:  提示：运行 'roll slides new "<主题>"' 创建第一个幻灯片。...]
",
}
`;

exports[`diff-test: roll slides == bash oracle > list no slides dir → note (zh) 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "[roll] 无幻灯片
  Hint: run 'roll slides new "<topic>"' to create one.
  提示：运行 'roll slides new "<主题>"' 创建第一个幻灯片。
",
}
`;

exports[`diff-test: roll slides == bash oracle > list unknown option → exit 1 1`] = `
{
  "status": 1,
  "stderr": "[roll] Unknown option: 
",
  "stdout": "",
}
`;

exports[`diff-test: roll slides == bash oracle > logs deck-not-found → err + exit 1 1`] = `
{
  "status": 1,
  "stderr": "[roll] Deck not found: nope
",
  "stdout": "",
}
`;

exports[`diff-test: roll slides == bash oracle > logs no failure records → info + exit 0 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "[roll] No failure records for clean
",
}
`;

exports[`diff-test: roll slides == bash oracle > logs no slug → usage + exit 1 1`] = `
{
  "status": 1,
  "stderr": "[roll] Usage: roll slides logs <slug>
Usage: roll slides logs <slug>
",
  "stdout": "",
}
`;

exports[`diff-test: roll slides == bash oracle > logs present .last-build.err → cat it 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "[2026-06-05T00:00:00Z] stage=render
Traceback
boom
",
}
`;

exports[`diff-test: roll slides == bash oracle > no subcommand → help + exit 1 1`] = `
{
  "status": 1,
  "stderr": "",
  "stdout": "roll slides — deck.md → HTML rendering
roll slides — 幻灯片 deck.md 渲染管线

USAGE  用法
  roll slides build <slug> [--no-open]
                          Render .roll/slides/<slug>/deck.md → .roll/slides/<slug>.html
                          渲染 deck.md 为 HTML 并自动打开浏览器
  roll slides new "<topic>" [--template <name>] [--no-build]
                          Generate deck.md via AI, then auto-build + open HTML
                          通过 AI 生成 deck.md，自动渲染并打开 HTML
  roll slides list        List all decks (built / stale / failed / unbuilt)
                          列出 .roll/slides/ 下所有幻灯片（四态）
  roll slides preview <slug> [--no-open]
                          Open .roll/slides/<slug>.html in the default browser
                          在浏览器中打开已渲染的幻灯片
  roll slides logs <slug> Show the last build failure log for a deck
                          显示幻灯片上次构建失败日志
  roll slides templates   List available slide templates (built-in + project)
                          列出可用模板（内置 + 项目自定义）
  roll slides delete <slug> [--force]
                          Delete a deck (dir + HTML) with confirmation prompt
                          删除幻灯片（含目录与 HTML），需确认

OPTIONS  选项
  --no-open               Skip auto-opening the rendered HTML in a browser
                          渲染后不自动打开浏览器
  --no-build              Skip auto-build after agent completes (deck.md only)
                          仅生成 deck.md，不自动渲染
  --force                 Skip confirmation prompt (delete subcommand)
                          跳过确认提示（delete 子命令）
  --help, -h              Show this help
                          显示本帮助
",
}
`;

exports[`diff-test: roll slides == bash oracle > preview missing HTML → err + exit 1 1`] = `
{
  "status": 1,
  "stderr": "[roll] Rendered HTML not found: .roll/slides/p.html
[EN:  未找到已渲染的 HTML：.roll/slides/p.html...]
  Hint: run 'roll slides build p' first to render it.
[EN:  提示：先运行 'roll slides build p' 渲染幻灯片。...]
",
  "stdout": "",
}
`;

exports[`diff-test: roll slides == bash oracle > preview no slug → usage + exit 1 1`] = `
{
  "status": 1,
  "stderr": "[roll] Usage: roll slides preview <slug> [--no-open]
Usage: roll slides preview <slug> [--no-open]
",
  "stdout": "",
}
`;

exports[`diff-test: roll slides == bash oracle > preview present HTML → Preview note (--no-open) 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "[roll] Preview → .roll/slides/ready.html
",
}
`;

exports[`diff-test: roll slides == bash oracle > templates builtin listing (en) 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "name                      source        path
----                      ------        ----
introduction-v3           builtin       <TMP>
pitch                     builtin       <TMP>
",
}
`;

exports[`diff-test: roll slides == bash oracle > templates builtin listing (zh) 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "name                      source        path
----                      ------        ----
introduction-v3           builtin       <TMP>
pitch                     builtin       <TMP>
",
}
`;

exports[`diff-test: roll slides == bash oracle > templates unknown option → exit 1 1`] = `
{
  "status": 1,
  "stderr": "[roll] Unknown option: 
",
  "stdout": "",
}
`;

exports[`diff-test: roll slides == bash oracle > templates with project override 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "name                      source        path
----                      ------        ----
introduction-v3           builtin       <TMP>
pitch                     builtin       <TMP>
custom                    project       .roll/slides/templates/custom.html
introduction-v3           project (override)  .roll/slides/templates/introduction-v3.html
",
}
`;

exports[`diff-test: roll slides == bash oracle > unknown subcommand → err + help + exit 1 (en) 1`] = `
{
  "status": 1,
  "stderr": "[roll] Unknown subcommand: frobnicate
roll slides — deck.md → HTML rendering
roll slides — 幻灯片 deck.md 渲染管线

USAGE  用法
  roll slides build <slug> [--no-open]
                          Render .roll/slides/<slug>/deck.md → .roll/slides/<slug>.html
                          渲染 deck.md 为 HTML 并自动打开浏览器
  roll slides new "<topic>" [--template <name>] [--no-build]
                          Generate deck.md via AI, then auto-build + open HTML
                          通过 AI 生成 deck.md，自动渲染并打开 HTML
  roll slides list        List all decks (built / stale / failed / unbuilt)
                          列出 .roll/slides/ 下所有幻灯片（四态）
  roll slides preview <slug> [--no-open]
                          Open .roll/slides/<slug>.html in the default browser
                          在浏览器中打开已渲染的幻灯片
  roll slides logs <slug> Show the last build failure log for a deck
                          显示幻灯片上次构建失败日志
  roll slides templates   List available slide templates (built-in + project)
                          列出可用模板（内置 + 项目自定义）
  roll slides delete <slug> [--force]
                          Delete a deck (dir + HTML) with confirmation prompt
                          删除幻灯片（含目录与 HTML），需确认

OPTIONS  选项
  --no-open               Skip auto-opening the rendered HTML in a browser
                          渲染后不自动打开浏览器
  --no-build              Skip auto-build after agent completes (deck.md only)
                          仅生成 deck.md，不自动渲染
  --force                 Skip confirmation prompt (delete subcommand)
                          跳过确认提示（delete 子命令）
  --help, -h              Show this help
                          显示本帮助
",
  "stdout": "",
}
`;

exports[`diff-test: roll slides == bash oracle > unknown subcommand → err + help + exit 1 (zh) 1`] = `
{
  "status": 1,
  "stderr": "[roll] 未知子命令：frobnicate
roll slides — deck.md → HTML rendering
roll slides — 幻灯片 deck.md 渲染管线

USAGE  用法
  roll slides build <slug> [--no-open]
                          Render .roll/slides/<slug>/deck.md → .roll/slides/<slug>.html
                          渲染 deck.md 为 HTML 并自动打开浏览器
  roll slides new "<topic>" [--template <name>] [--no-build]
                          Generate deck.md via AI, then auto-build + open HTML
                          通过 AI 生成 deck.md，自动渲染并打开 HTML
  roll slides list        List all decks (built / stale / failed / unbuilt)
                          列出 .roll/slides/ 下所有幻灯片（四态）
  roll slides preview <slug> [--no-open]
                          Open .roll/slides/<slug>.html in the default browser
                          在浏览器中打开已渲染的幻灯片
  roll slides logs <slug> Show the last build failure log for a deck
                          显示幻灯片上次构建失败日志
  roll slides templates   List available slide templates (built-in + project)
                          列出可用模板（内置 + 项目自定义）
  roll slides delete <slug> [--force]
                          Delete a deck (dir + HTML) with confirmation prompt
                          删除幻灯片（含目录与 HTML），需确认

OPTIONS  选项
  --no-open               Skip auto-opening the rendered HTML in a browser
                          渲染后不自动打开浏览器
  --no-build              Skip auto-build after agent completes (deck.md only)
                          仅生成 deck.md，不自动渲染
  --force                 Skip confirmation prompt (delete subcommand)
                          跳过确认提示（delete 子命令）
  --help, -h              Show this help
                          显示本帮助
",
  "stdout": "",
}
`;
